# todo

./: README.md  pyproject.toml
tests/: conftest.py  test_categories.py
todo/: __main__.py  auth.py  categories.py  database.py  db.py  exceptions.py  main.py  models.py  tasks.py
